fix form on smaller resolutions

--- a/css/master.css
+++ b/css/master.css
@@ -41,7 +41,7 @@ body {
   display: none;
   background: white;
   position: fixed;
-  width: 20%;
+  max-width: 400px;
   top: 40%;
   padding: 20px;
   left: 0;
@@ -96,5 +96,10 @@ body {
 @media (max-width: 700px) {
   .book-cont {
     grid-template-columns: repeat(1, 1fr);
+  }
+
+  .form {
+    left: 10px;
+    right: 10px;
   }
 }
